--- a/Ksu.Cis300.MaximumOutgoingSum/Ksu.Cis300.MaximumOutgoingSum.csproj
+++ b/Ksu.Cis300.MaximumOutgoingSum/Ksu.Cis300.MaximumOutgoingSum.csproj
@@ -55,14 +55,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Lab32Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Lab32Form.Designer.cs">
+      <DependentUpon>Lab32Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Lab32Form.resx">
+      <DependentUpon>Lab32Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
